Devoxx - Chaos engineering

--- a/_posts/2018-06-25-devoxx-poland-2018.md
+++ b/_posts/2018-06-25-devoxx-poland-2018.md
@@ -22,16 +22,16 @@ TODO:
 
 - You can find most of the topics addressed by Mr. Jakub in his blog
  post 
- [Event Storming and Spring with a Splash of DDD](https://spring.io/blog/2018/04/11/event-storming-and-spring-with-a-splash-of-ddd)
+ [Event Storming and Spring with a Splash of DDD](https://spring.io/blog/2018/04/11/event-storming-and-spring-with-a-splash-of-ddd).
 - ORM's can introduce 
  [accidental complexity](https://en.wikipedia.org/wiki/No_Silver_Bullet) into
  our applications. Example: loading a list of child
  objects when we only need
  to check number of objects (we are just calling `.size()` on the list)
  can cause performance bottlenecks when we are using ORM to persist
- our aggragates
+ our aggragates.
 - Persisting aggragate state as a list of events is not only simpler
- but also much more aligned with DDD design
+ but also much more aligned with DDD design.
 - You should prefer returning domain events from aggragate instead of
  publishing them (no more `EventPublisher`s in aggregates). For example:
 
@@ -99,6 +99,112 @@ You can find Jakub Pilimon blog and twitter here:
 
 - [Blog](https://pillopl.github.io/)
 - [Twitter](https://twitter.com/JakubPilimon)
+
+#### From availability and reliability to chaos engineering. Why breaking things should be practised by Adrian Hornsby 
+
+- Jesse Robbins is one of the fathers of Chaos Engineering 
+ (see [this](https://www.youtube.com/watch?v=zoz0ZjfrQ9s) video from 2011).
+- Generally we break things in production to build confidence that
+ we can quickly fix real problems.
+
+Introducing Chaos Engineering into organisation:
+
+- Start small. Only break things in production that you are sure are 
+ able to survive your "experiments". 
+- First make your application resilient then test that resiliency.
+ Do NOT do Chaos Engineering experiments in production that you are sure
+ will kill your app.
+- Test not only infrastucture but also people. If say Bob
+ solves 90% of problems on production, check what will happen if other
+ team members must solve such problems without Bob.
+
+My note: I cannot resist myself from calling this technique a "bus monkey".
+
+- Remember: **Chaos doesn't cause problems it reveals them**
+- Areas to test: people, applications, network and data, infrastructure
+
+Increasing resiliency:
+
+- Availability is measured in "nines", e.g. four nines is 99.99%, 
+ six nines is 99.9999% of time on which application works.
+- four-nines is an industry standard (as of 2018)
+- Easiest way to increase availability is to create multiple copies of
+ the least reliable resorces. If for example you have a single 
+ server that has 90% of 
+ availability, having two such servers working in parallel 
+ will create a system with availability of 99%.
+- When you are hosting your apps in the cloud remember to use multiple 
+ availibility zones (AWS lingo).
+- Use auto-scaling.
+- Follow infrastructure as code approach to achieve testable infrastructure.
+- Your infrastructure should be immutable. Never update servers always
+ create new instances and remove old one.
+- Practice rolling deployments. After a fresh deploy of an application
+ do NOT kill old servers immediately. Allow them to say for a while as
+ a standby - just in case when your new app version will not work they
+ will allow you to quickly rollback your changes.
+- Never put all your databases on the same server. Use sharding to spread
+ data across many databases.
+- Prefer messaging to HTTP requests, message queues are more resillient.
+ Send commands instead of issuing HTTP requests.
+- When using HTTP remember to use circuit breaker library.
+ Use exponential backoff alogirthm.
+- Remember about DNS (DNS failover, smart load balancing).
+- Transcient state is a state that is constantly changing, like
+ webpage view counters or ad clicks counters. Do not put transcient 
+ state into database, 
+ instead use specialized solutions like Redis to keep it.
+- Use async UI, do not wait for operation to finish, display notification
+ to the user when opperation succedes or fails. See: 
+ [Stop Getting In My Way! — Non-blocking UX](https://medium.com/@sophie_paxtonUX/stop-getting-in-my-way-non-blocking-ux-5cbbfe0f0158)
+
+Chaos Engineering in Practice:
+
+- Chaos Engineering is like a fire drills. You are doing it so that
+ people will be prepared for a real fire and will not panic.
+- Without excecisses people will get scary when dealing with real issues
+ on production.
+- How to start? Start by defining *steady state* of your application.
+ In other words define when you assume that your application is working.
+ For example when you have an online shop, you may assume that your 
+ application is working when people click "Buy" button a certain number of 
+ times per hour. This will be a steady state of your application that
+ you will monitor during chaos engineering experiments to make sure
+ that application is still working.
+- Generally you should use business metric to define steady state.
+ Measure things that bring you money!
+- Define experiments. What if our DB server stops working?
+ What if we have a huge spike in traffic?
+- Only try to break things that you are 100% sure should not break
+ (otherwise make your application resilient first).
+- During chaos experiments always have an emergency stop button so that
+ you can stop your experiment at any time.
+- Start small! (yeah again, looks like this is very important)
+- Experiment with canary deployments e.g. run experiments on 1% of total
+ traffic
+- Quantify results. How much time elapsed from the failure to detection of 
+ that failure? How much time did it take to fix it?
+ Is our monitoring working properly? Does notification (pager duty) system
+ works corectly?
+- Never blame a single person, instead concentracte on things that 
+ you can improve.
+
+General tips:
+
+- During post mortems use Rule of 5 Why. 
+ Why it broke? Because of X. Why X happened? Because of Y.
+ Why Y happened? ... (repeat 5 times)
+- Be patient.
+- Be aware of cultural blocks (especially among business people).
+ Generally do not tell business people that you want to 
+ break your application.
+ Remember chaos reveals problems not causes them.
+
+Overall this was a very good presentation with a bit of AWS advertisment.
+
+You can find Adrian Hornsby twitter here:
+
+- [Twitter](https://twitter.com/adhorn)
 
 ### Buzz
 
