Devoxx - microservices valley of darkness

--- a/_posts/2018-06-25-devoxx-poland-2018.md
+++ b/_posts/2018-06-25-devoxx-poland-2018.md
@@ -206,6 +206,53 @@ You can find Adrian Hornsby twitter here:
 
 - [Twitter](https://twitter.com/adhorn)
 
+#### Through the valley of darkness, the road to microservices by Dominik Boszko
+
+- Ask yourself if you get any of the benefits that
+ microservice architecture promised you.
+- Signs that you are working with distributed monolith:
+  * Change in one microservice propagates to others
+    e.g. I return additional field from some REST endpoint in service A,
+     but may application will start working only when I recompile service B.
+  * There is too much comunications going on between teams.
+  * Change in service A that is managed by my team requires approval from
+    some other team
+- When working with microservices Don't Repeat Yourself rule is considered
+ harmfull. Microservices should be as independent from each other as possible.
+- Avoid coupling between microservices. Do NOT create libraries with shared
+ REST DTO's or events that will be used by many services.
+ Instead introduce contracts (use tools like Swagger). 
+ Each service should contain it's own copy of consumed DTO's and events.
+ These DTO's should contain only the fields that the service needs.
+- Be wary of `Core`s, `Platform`s, `Common`s etc. libraries that are used
+ by every microservice. Microservices should be independent of each other.
+ In the best case scenario you will only share security and logging related code.
+- Shared libraries are bad because of transitive dependencies.
+ For example team A adds a dependency on SuperXmlParser-v2.0 to the core library.
+ This breaks service B maintained by team B that is using SuperXmlParser-v1.0 library.
+- When using microservice architecture role of software architect changes.
+ Architect no longer can enforce his decisions on teams. Instead teams are
+ self organizing and cross functional and they ultimatelly decide on the design 
+ and architecture of the services that they own.
+- Software architect should concentrate on high level concerns like security,
+ integration with other applications and best practices. Think BIG PICTURE!
+- Software architects should strive to avoid micromanagement (especially when they
+ have only experience with monolithic application development).
+- Do not be afraid to use different technologies and architectural styles for
+ different microservices (this is one of the selling points of the
+ microservice architecture after all).
+- Teams should be aligned with bounded context. Teams should have a deep
+ knowledge of thier domains. Therefore teams are best equipped to make
+ architectural decisions. This is the best usage of the top talend that
+ you have hired.
+- Avoid nanoservices (service that does the job of a single method).
+- Do not rush into microservices. Think if you really needs benefits that
+ this approach can offer you. Keep in mind additional complexity that
+ comes with this approach.
+
+This was one of the best presentations that I have seen on Devoxx.
+It was based on personal experiences of Mr. Dominik. Good Job!
+
 ### Buzz
 
 TODO: Write buzzwords and other stuff like GraphQL
