Devoxx - How to impress your boss

--- a/_posts/2018-06-25-devoxx-poland-2018.md
+++ b/_posts/2018-06-25-devoxx-poland-2018.md
@@ -253,6 +253,96 @@ You can find Adrian Hornsby twitter here:
 This was one of the best presentations that I have seen on Devoxx.
 It was based on personal experiences of Mr. Dominik. Good Job!
 
+#### How to impress your boss and your customer in a modern software development company by Wojciech Seliga
+
+- Modern software house is decentralized. People communicate with each other.
+ Programmers talk to the client. Client can decide whom you should give a rise!
+- A few more attributes of modern software company: short feedback loops,
+ constant improvement (thank to feedback), autonomous teams, decentralized
+ decision making, individual impact (every one feels that his job is important
+ and that this person contributes significantly to the sucess of company).
+- In other words: Customer becomes the new boss.
+- How to impress your new boss? Deliver great stuff!
+- Check out [How Google Works](http://a.co/93Pp6BM) book.
+ It uses term *Smart creatives* to define modern knowledge workers.
+ Smart creatives are not only tech but also business savvy.
+ They are open, passionante persons that strive to learn something new
+ every day. (My note: this sounds like some old school hackers to me).
+- Smart creatives like to work on interesting problems.
+ They also like to work with interesting people. They often
+ have interesting and colorful lives.
+- Negativity destroys people. It also destroys people's brains - so please
+ don't be negative.
+- Check out [Pragmatic Thinking and Learning](https://pragprog.com/book/ahptl/pragmatic-thinking-and-learning) book
+- (My note: more motivational $#@!, I have nothing agains it but I think this is
+ not based on any scientific studies. It is just pop-psychology stuff 
+ so belive it or not). Success is 10% talent, 90% hard work.
+ Hard work beats talent when talent fails to work hard.
+- Anyone who stops learning is already OLD (my note: I should better learn something
+ from this presentation).
+- Growth mindset. Prise for efford not for results (my note: more pop-psychology).
+
+Questions for job interview that can test if peron has growth mindset
+and is a good candidate to become smart creative:
+
+- What have you learned in your current job?
+- How do you decide what to learn?
+- What did you learn last month?
+- What do you do to stay up to date with tech?
+- What trends in technology did you miss?
+- What challenges do you expect at your new job?
+- How do you measure yourself and your progress?
+
+Who is a senior developer?
+
+- Primary role of a senior developer is to teach and mentor others.
+- Senior developer should be a great example to others.
+- Seniors should strive to build better environment for developers
+ (no blaming each other, better dev processes, better and more friendly
+  code review etc.)
+- Being a senior developer is not about doing the same things as mid but
+ faster.
+
+More job interview questions:
+
+- What could you teach me in 5 minutes?
+- What do you do now differently than in the last 5 years?
+- How did you impact other people?
+
+Back to main topic again:
+
+- Be the weakest person in the room (so that you will learn quickly).
+- Being the best person in the room is bad for your professional development.
+ You may not learn as much as you can.
+- 1 year in a fast peaced environment is often better than 5+ years of experience
+ in an average company.
+
+More job interview questions:
+
+- What is your best professional achievment?
+- What is your top strenght?
+- What is your weakest point as a professional software developer?
+- What are you doing about it?
+- Why did you choose software development as your career?
+- What are you passionate about?
+
+Back to main topic again:
+
+- Developers should be ready to take responsibility for the product they build.
+- Developers that are already responsible may take ownership of their product.
+- Passion is very important for smart creatives. Passion gives you intrinsic 
+ motivation. Curiosity will force you to learn new things. Desire to change
+ the words will make it happen.
+- Modern software house is sliced verticaly. Every team owns parts of the product
+ and can do support, maintanance and  development. 
+ Also each team can talk directly with the client and make it's own
+ decisions.
+
+Overall it was an interesting and good presentation but I have a feeling
+that I just missed the point.
+
+Mr. Wojciech [Twitter](https://twitter.com/wseliga?lang=en).
+
 ### Buzz
 
 TODO: Write buzzwords and other stuff like GraphQL
