Devoxx - Docs in self-documenting word

--- a/_posts/2018-06-25-devoxx-poland-2018.md
+++ b/_posts/2018-06-25-devoxx-poland-2018.md
@@ -343,6 +343,23 @@ that I just missed the point.
 
 Mr. Wojciech [Twitter](https://twitter.com/wseliga?lang=en).
 
+#### Docs in the self-documenting world by Wojtek Erbetowski
+
+(my note: I was late so I missed a lot of interesting stuff here)
+
+- Apply UX techniques like [personas](https://en.wikipedia.org/wiki/Persona_(user_experience)) and [user journey mapping](https://boagworld.com/usability/customer-journey-mapping/) to the documentation.
+- Do not put code snippets into documentation. Instead link to a real 
+ test or program source code. Especially linking to tests source code is
+ adviced, this way documentation will always will be up to date.
+- A lot of tools like [AsciiDoc](http://mrhaki.blogspot.com/2014/04/awesome-asciidoc-include-partial-parts.html) can already do this.
+- Writing a documentation should be a pleasure for developers.
+- Example: library of React components was created as a React application.
+ For each component a short description, real working component, example source code
+ usage and a list of available properties is displayed.
+- This library is actually generated for the source code of the components. 
+ So it doesn't need to be maintained by developers and stays always up to date.
+- Always think for whom you are creating the documentation.
+
 ### Buzz
 
 TODO: Write buzzwords and other stuff like GraphQL
