Devoxx - Better TDD

--- a/_posts/2018-06-25-devoxx-poland-2018.md
+++ b/_posts/2018-06-25-devoxx-poland-2018.md
@@ -360,6 +360,65 @@ Mr. Wojciech [Twitter](https://twitter.com/wseliga?lang=en).
  So it doesn't need to be maintained by developers and stays always up to date.
 - Always think for whom you are creating the documentation.
 
+#### Improving your Test Driven Development in 45 minutes by Jakub Nabrdalik
+
+- Interesting article [Does TDD really lead to good design?](https://codurance.com/2015/05/12/does-tdd-lead-to-good-design/)
+
+Common problems with tests:
+
+- Too low level tests:
+  - We have test for every single class in our project.
+  - Tests knows too much about code that they are testing.
+    Even minor refactorings of class API result in broken tests.
+
+- Too high level tests:
+  - We only have integration tests.
+  - Tests are slow. Generally speaking integration tests that use even in memory
+    DB like H2 are too slow for TDD cycle (people are losing flow).
+
+- To have effective TDD cycle we should been able 
+ to run a single unit test in less than 1 second.
+
+The solution:
+
+- Group your code into modules. Module API changes more slowly than
+ class API. Test only module public API.
+- A single module contains all application layers e.g. REST controllers,
+ services, command handlers, repositories, database access etc.
+ In other words modules are vertical slices of functionality.
+- Module should be like a microservice.
+- Integration tests are slow. Use integration tests only to test
+ crucial paths through your application. Tests things that bring you
+ money.
+- It is OK to have many assertions in a single integration test.
+- Module should expose a `ModuleConfiguration` class that can create a
+ ready to use module that uses fakes to interact with other modules and IO.
+- Prefer fakes to mocks and stubs. Use in memory repositories. Avoid doing IO
+ at all costs in unit tests.
+- Test only behaviour of the module using its public API.
+- Use mocks only for interaction with other modules.
+- Checkout this repo [https://github.com/olivergierke/sos](https://github.com/olivergierke/sos)
+
+Towards better tests:
+
+- Use business names (ubiquitus language) in the tests (and tests names too).
+- Hide unnecessary information from test code (you should only show information
+ that are relevant for this particular test).
+- For each module create utility classes that provide real-like test data.
+- Create a DSL for your tests.
+- Prefer code to frameworks like Cucumber (business people don't use it anyway).
+- Spock is a very good testing framework for Java.
+- You may use shared immutable (read only) DB with test data to test 
+ e.g. repositories - this way you can speed up your intergration tests.
+
+Mr. Jakub Nabrdalik twitter and blog:
+
+* [Twitter](https://twitter.com/jnabrdalik?lang=en)
+* [Blog](http://blog.solidcraft.eu/)
+
+If you want to learn more about Mr. Jakub way of doing modules
+please see his [demo project](https://github.com/jakubnabrdalik/hentai) on GitHub.
+
 ### Buzz
 
 TODO: Write buzzwords and other stuff like GraphQL
