Devoxx - modules or microservices

--- a/_posts/2018-06-25-devoxx-poland-2018.md
+++ b/_posts/2018-06-25-devoxx-poland-2018.md
@@ -419,9 +419,67 @@ Mr. Jakub Nabrdalik twitter and blog:
 If you want to learn more about Mr. Jakub way of doing modules
 please see his [demo project](https://github.com/jakubnabrdalik/hentai) on GitHub.
 
+#### Modules or Microservices? by Sander Mak
+
+For this presentation I will not provide notes. Instead I am going to 
+express my views on arguments used by Mr. Sander.
+
+Mr. Sander belives that developing applications using microservice
+architecture is much more diffuclt than developing a monolithic software.
+Also Mr. Sander belives that microservice architecture moves so called
+"wall of unmaintainability" further from us (we may add more features to
+the application before it becomes unmaintainable in therms of cost).
+I fully agree with these both statements.
+
+Now the things that I disagree with. Mr. Sander proposes a modular architecture
+(monolith split into modules) as a silver bullet that will allow us to reap
+most of the benefits of microservices will still preserving simplicity of
+development. Unfortunatelly in his presentation some disadvantages of this
+aproach were not mentioned, like:
+
+- Slow build and testing. Slow deploy. (It is still a monolit just with a better
+ code organization.)
+- A minor error in a single unimportant module 
+ can break entire application.
+ For example large numbers of unclosed files,
+ memory leaks or stackoverflow exceptions can break (depending
+ on used tech stack) even entire application.
+- Implicit shared state between modules like current working directory, PID etc.
+- A modular application will usually use single database technology and
+ a single database server (possibly with read replicas). 
+ As writes will be server by a single server instance this may cause 
+ severe performance problems in the future.
+- Entire application must be writeen in the same technology (JVM, .NET, node.js).
+- Usually in monolithic applications people have a kind of Core or Platform 
+ (or Commons or whatever) library that contains utils and shared components.
+ This kind of libraries have a tendency to grow uncontrollably 
+ and over time they become difficult to change
+ (beacuse any change to them requires a lot of refactoring in several modules).
+ Also quality of these libraries is often substandard (they are usually not activly
+ maintained after they provide functionality needed by thier authors - 
+ if it works don't change it approach).
+
+I must admit that nowadays it is much more difficult to develop microservices
+vs monolith. But I belive this is caused mostly by lack of good 
+frameworks and tools. For example I can imagine that in the future
+we will have some standard API for logging and monitoring offered by
+all relevant cloud providers. From my point of view Spring Boot framework
+looks very promising. Also I belive that we have only just started doing 
+cloud computing
+(it still a very young and immature technology) and we should see a lot of
+improvements in area of distributed system development.
+
+To sum app: using modules is always a good idea. Depending on your
+requirements somtimes you will want to build a modular monolith, sometimes
+a bunch of microservices. Context is always the king.
+
 ### Buzz
 
-TODO: Write buzzwords and other stuff like GraphQL
+- GraphQL
+- Chaos Engineering
+- A/B Testing
+- Canary releases
+- Infrastructure as Code
 
 ### Summary
 
