--- a/_posts/2018-06-25-devoxx-poland-2018.md
+++ b/_posts/2018-06-25-devoxx-poland-2018.md
@@ -11,12 +11,40 @@ logo: 'assets/images/home.png'
 disqus: true
 ---
 
+[Photo above shows Mr. Jakub Nabrdalik during his presentation about TDD 
+in main conference room.]
+
 ### About conference
 
-TODO:
-- Opening and book
+Thanks to my employeer [CyberVadis](https://cybervadis.com/) I was able to
+attend Devoxx Poland 2018 conference. The conference took place in
+Cracow (Poland) and lasted three days (20 - 22 June).
+
+Overall my experience with the conference was very good.
+Things that I particulary liked were: good coffee, tasty muffins and
+beautiful and very comfortable venue ([Cracow ICE](http://www.icekrakow.pl/)).
+
+Things that organisers could have done better: on the first day of the 
+conference it was difficult to find the right rooms (especially room no. 5). 
+Rooms should be marked in a more outstanding way. Quality of
+food served during lunches was
+only mediocre, I expected something better. Conference offered a lot of
+presentation still the number of presentation on advanced topics were limited.
+I expected to see more advanced stuff there.
+
+Conference keynote presentation was amazing. 
+The speaker Mr. Brian Christian told us about application of
+theoretical computer science stuff to everyday problems.
+Presentation was based on Mr. Brian book 
+[Algorithms to Live By](http://a.co/dYsQtCb).
+I already orderd my own copy ;)
+
 
 ### My notes from presentations
+
+Below you can find digitalized version of my notes that I took during
+presentations. Remember that they are my **personal** notes mostly created for
+my colleagues that couldn't attend the conference. Use them at your own risk.
 
 #### State or events? Which shall I keep? by Jakub Pilimon
 
@@ -467,9 +495,9 @@ all relevant cloud providers. From my point of view Spring Boot framework
 looks very promising. Also I belive that we have only just started doing 
 cloud computing
 (it still a very young and immature technology) and we should see a lot of
-improvements in area of distributed system development.
+improvements in the area of distributed system development.
 
-To sum app: using modules is always a good idea. Depending on your
+To sum up: using modules is always a good idea. Depending on your
 requirements somtimes you will want to build a modular monolith, sometimes
 a bunch of microservices. Context is always the king.
 
@@ -481,6 +509,3 @@ a bunch of microservices. Context is always the king.
 - Canary releases
 - Infrastructure as Code
 
-### Summary
-
-TODO
